# das-whisper

./: .gitignore  README.md  WhisperSeg_Training_Pipeline.ipynb  pyproject.toml
src/das_whisper/: __main__.py  audio_utils.py  datautils.py  evaluate.py  model.py  predict.py  train.py  train_lightning.py  utils.py
src/das_whisper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
